# majortom

./: README.md  check_overlaps.py  pyproject.toml
.github/workflows/: publish.yaml
src/: MajorTom.py
src/majortom/: MajorTom.py  __about__.py
src/majortom_eg/: MajorTom.py  __about__.py
tests/: test_major_tom_grid.py
