[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "majortom"
version = "0.1.0"
description = 'equal area grid utils'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "tingold", email = "hutch@earthgenome.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [ "numpy","shapely","geolib"]

[project.urls]
Documentation = "https://github.com/earth-genome/majortom#readme"
Issues = "https://github.com/earth-genome/majortom/issues"
Source = "https://github.com/earth-genome/majortom"

[tool.hatch.version]
path = "src/majortom/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/majortom tests}"

[tool.coverage.run]
source_pkgs = ["majortom", "tests"]
branch = true
parallel = true
omit = [
  "src/majortom/__about__.py",
]

[tool.coverage.paths]
majortom = ["src/majortom", "*/majortom/src/majortom"]
tests = ["tests", "*/majortom/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
